fix scrollbar-gutter style

--- a/src/ui/preflight.css
+++ b/src/ui/preflight.css
@@ -1,5 +1,5 @@
 :root {
-	scrollbar-gutter: stable-both;
+	scrollbar-gutter: stable both-edges;
 }
 
 ::-webkit-scrollbar {
